--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,6 @@ h1 {
   line-height: 1.1;
 }
 
-
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -53,4 +52,8 @@ h1 {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
